--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<div id="header">
 			<div id="all">
 			<div id="logo">
-			<img id="image" src="https://cdn.icon-icons.com/icons2/159/PNG/256/signal_green_22561.png">
+			<img id="image" src="01-signal_green_22561.png">
 			</div>
 		  <div id="title">
 			<h1 id="crow">CROWDME</h1>
@@ -36,7 +36,7 @@
 		</div><!--Конец баннера-->
 		<div id="presentation">
 			<div id="pic">
-				<img id="picture" src="https://cdn.icon-icons.com/icons2/1149/PNG/512/1486504325-business-graph-pie-chart-revenue-business-growth-graph-growth-chart_81320.png">
+				<img id="picture" src="02-1486504325-business-graph-pie-chart-revenue-business-growth-graph-growth-chart_81320.png">
 			</div>
 			<div id=text>
 				<h1 id="work">OUR WORK IS THE PRESENTATION</br>OF OUR CAPABILITIES</h1>
@@ -59,7 +59,7 @@
 			</div>
 		</div><!--Конец Presentation-->
 		<div id="glasses">
-			<img id="glass" src="https://cdn.icon-icons.com/icons2/567/PNG/512/glasses_icon-icons.com_54397.png">
+			<img id="glass" src="03-glasses_icon-icons.com_54397.png">
 			<div id="browse">
 				<h2>Browse project, like booking a hotel online!</h2>
 				<p class="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -67,7 +67,7 @@
 		</div><!--Конец глассес-->
 		<div id="find">
 			<div id="properties">
-				<img id="sofa" src="https://cdn.icon-icons.com/icons2/2664/PNG/512/comfy_sofa_icon_161240.png">
+				<img id="sofa" src="04-comfy_sofa_icon_161240.png">
 				<div id="txtleft">
 				<h2 class="titlefind">Find Proprties</h2>
 				<p class="lorem">Sign up to browsee the portfolio. Your journey to becoming a real state baron starts here.</p>
@@ -75,7 +75,7 @@
 			  </div>
 			</div>
 			<div id="buyers">
-				<img id="wallet" src="https://cdn.icon-icons.com/icons2/514/PNG/512/wallet_icon-icons.com_51034.png">
+				<img id="wallet" src="05-wallet_icon-icons.com_51034.png">
 			   <div id=txtright>
 				<h2 class="titlefind">Find Buyers</h2>
 				<p class="lorem">Sign up to browsee the portfolio. Your journey to becoming a real state baron starts here.</p>
@@ -158,7 +158,7 @@
 					<p class="sub">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 					</p>
 				  </div>
-					<img class="beckham" src="https://tmssl.akamaized.net/images/portrait/originals/3139-1459504284.jpg">
+					<img class="beckham" src="06-3139-1459504284.jpg">
 					<h4 class="david"><b>David Beckham</b></h4>
 				</div>
 				<div class="best">
@@ -167,19 +167,19 @@
 					<p class="sub">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 					</p>
 				  </div>
-					<img class="beckham" src="https://95186b00a1b893216479-3edab95dac25dea8d2c188c603fe84fe.ssl.cf1.rackcdn.com/02-NYT_WC.jpg">
+					<img class="beckham" src="07-02-NYT_WC.jpg">
 					<h4 class="david"><b>Lionel Messi</b></h4>
 				</div>
 			</div><!--Конец фидбэк-->
 		</div><!--Конец бипарт-->
 		<div id="brands">
-			<a href="#"><img class="firma" src="https://cdn.icon-icons.com/icons2/792/PNG/512/windows_icon-icons.com_65549.png"></a>
-			<a href="#"><img class="firma" src="https://cdn.icon-icons.com/icons2/792/PNG/512/EVERNOTE_icon-icons.com_65577.png"></a>
-			<a href="#"><img class="firma" src="https://cdn.icon-icons.com/icons2/792/PNG/512/RSS_icon-icons.com_65548.png"></a>
-			<a href="#"><img class="firma" src="https://cdn.icon-icons.com/icons2/792/PNG/512/YAHOO_icon-icons.com_65566.png"></a>
-			<a href="#"><img class="firma" src="https://cdn.icon-icons.com/icons2/792/PNG/512/LINKEDIN_icon-icons.com_65538.png"></a>
-			<a href="#"><img class="firma" src="https://cdn.icon-icons.com/icons2/792/PNG/512/APPLE_icon-icons.com_65545.png"></a>
-			<a href="#"><img class="firma" src="https://cdn.icon-icons.com/icons2/792/PNG/512/spotify_icon-icons.com_65552.png"></a>
+			<a href="#"><img class="firma" src="08-windows_icon-icons.com_65549.png"></a>
+			<a href="#"><img class="firma" src="09-EVERNOTE_icon-icons.com_65577.png"></a>
+			<a href="#"><img class="firma" src="10-RSS_icon-icons.com_65548.png"></a>
+			<a href="#"><img class="firma" src="11-YAHOO_icon-icons.com_65566.png"></a>
+			<a href="#"><img class="firma" src="12-LINKEDIN_icon-icons.com_65538.png"></a>
+			<a href="#"><img class="firma" src="13-APPLE_icon-icons.com_65545.png"></a>
+			<a href="#"><img class="firma" src="14-spotify_icon-icons.com_65552.png"></a>
 		</div>
 		<div id="footer">Copyright &copy; 2021 Alec Gebert</div>
 	</div>
