--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=1300">
 		<title>Crowdme</title>
 <link rel="stylesheet" href="Crowdme.css">
 	</head>
